# pyonacci

./: .coveragerc  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
src/pyonacci/: __main__.py  cli.py  skeleton.py
src/pyonacci/algorithms/: naive_recursive.py
tests/: conftest.py  test_skeleton.py
